--- a/assembl/static2/package.json
+++ b/assembl/static2/package.json
@@ -131,6 +131,7 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^1.5.0",
+    "react-dates": "^18.4.1",
     "react-dom": "^16.3.1",
     "react-final-form": "^3.6.2",
     "react-final-form-arrays": "^1.0.6",
